Handle max score